# outlook-automation

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  cli.py  docker-compose.yml  pyproject.toml  test_outlook_connection.py
.github/workflows/: ci.yml  release.yml
services/categorization_service/: services.py
services/categorization_service/tests/: conftest.py
services/cli_service/: service.py
services/outlook_service/: models.py  service.py
services/outlook_service/tests/: test_service.py
services/reporting_service/: models.py
services/service_template/: config.py  services.py
services/time_aggregation_service/: routes.py
services/time_aggregation_service/tests/: test_service.py
services/time_categorization_service/: main.py
shared/: logger.py  utils.py
shared/tests/: test_utils.py
