[project]
name = "outlook-automation"
version = "0.1.0"
description = ""
authors = [
    {name = "mit-burr", email = "mitchell.burr@defisolutions.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "pywin32 (>=308,<309)",
    "pandas (>=2.2.3,<3.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "prompt-toolkit (>=3.0.50,<4.0.0)"
]

[tool.poetry]
packages = [
    { include = "services" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"